# mementoGE

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Draw.cpp  Draw.h  GameObject.cpp  GameObject.h  IndexBuffer.cpp  Indexbuffer.h  KeyListener.cpp  KeyListener.h  MouseListener.cpp  README.md  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  Texture.cpp  Vertex.h  VertexAttribute.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  build.sh  main.cpp  run-cmake.sh  run.sh
assets/shader/: fragment.shader  grid_fragment.shader  grid_vertex.shader  vertex.shader
engine/: CMakeLists.txt  Camera.cpp  Camera.h  CreateShader.cpp  CreateShader.h  GameObject.cpp  GameObject.h  Indexbuffer.h  KeyListener.cpp  KeyListener.h  MouseListener.cpp  MouseListener.h  RenderBatch.cpp  RenderBatch.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexAttribute.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
engine/core/: Camera.cpp  Camera.h  EditorLayer.cpp  EditorLayer.h  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  GLIncludes.h  GameObject.cpp  GameObject.h  Gizmo.h  ImGuiWrapper.cpp  ImGuiWrapper.h  KeyListener.cpp  KeyListener.h  MouseActionController.cpp  MouseActionController.h  MouseListener.cpp  MouseListener.h  MovementMode.h  Resource.cpp  Resource.h  RigidBody2D.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  Transform.cpp  Transform.h  Window.cpp  Window.h
engine/opengl/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  Indexbuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexAttribute.h  VertexBuffer.cpp  VertexBuffer.h
engine/physics/: BoxCollider2D.h  CircleCollider2D.h  EdgeCollider2D.h  JointComponent.h  Physics2D.cpp  Physics2D.h  PolygonCollider2D.h  RigidBox2D.h
engine/renderer/: GridRenderer.cpp  GridRenderer.h  PhysicsRenderer.cpp  PhysicsRenderer.h  RenderBatch.cpp  RenderBatch.h  SpriteRenderer.cpp  SpriteRenderer.h
engine/util/: Time.h  log_error.h
game/: Application.cpp  Application.h  KeyListener.cpp  MouseListener.cpp  MouseListener.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  scene.yaml
opengl/: draw.cpp
opengl/shader/: create_shader.cpp  fragment.shader
util/: Time.cpp  Time.h  log_error.cpp  log_error.h
